# AI_Comment_Evaluator

./: .coverage  .gitignore  README.md  pyproject.toml  run_samples.txt  setup.cfg
.github/workflows/: ci.yml
ccqe/: __init__.py  cli.py  feedback.py  model.py  parser.py  preprocess.py
samples/: example_good.py  example_mixed.py
tests/: test_cli.py  test_cli_summary.py  test_feedback.py  test_feedback_edges.py  test_model.py  test_model_edges.py  test_model_semantic_redundancy.py  test_parser.py  test_parser_docstrings.py
