
[project]
name = "ccqe"
version = "0.1.0"
description = "AI-Powered Code Comment Quality Evaluator (prototype)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["ccqe*"]
exclude = ["tests*", "samples*", ".github*"]